# libromocc

./: .gitignore  CMakeLists.txt  README.md  Robot.h
.github/workflows/: build_ubuntu.yml  build_windows.yml  ccpp.yml  cmake_build.yml
cmake/: ExternalCxxOpts.cmake  ExternalEigen.cmake  ExternalOrocos.cmake  ExternalPybind.cmake  ExternalQt5.cmake  ExternalURSimulator.cmake  ExternalZeroMQ.cmake  Externals.cmake  InstallCorah.cmake  InstallRomocc.cmake  Macros.cmake  Requirements.cmake  RomoccConfig.cmake.in  RomoccUse.cmake.in
cmake/Qt5Core/: Qt5CoreConfig.cmake
cmake/Qt5Gui/: Qt5GuiConfig.cmake
cmake/Qt5Multimedia/: Qt5MultimediaConfig.cmake
cmake/Qt5MultimediaWidgets/: Qt5MultimediaWidgetsConfig.cmake
cmake/Qt5Network/: Qt5NetworkConfig.cmake
cmake/Qt5OpenGL/: Qt5OpenGLConfig.cmake
cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake
communication/: CommunicationInterface.cpp  CommunicationInterface.h  MessageDecoder.cpp  MessageDecoder.h
corah/: CMakeLists.txt  Robot.cpp  Robot.h
corah/calibration/: CMakeLists.txt  CalibrationHelpers.cpp  CalibrationHelpers.h  CalibrationMethods.cpp  CalibrationMethods.h
corah/communication/: CMakeLists.txt  Client.cpp  Client.h  CommunicationInterface.cpp  CommunicationInterface.h  MessageDecoder.cpp  MessageDecoder.h  MessageEncoder.cpp  MessageEncoder.h
corah/communication/old/: RobotConnection.cpp  RobotConnection.h  Socket.cpp  Socket.h  SocketConnection.cpp  SocketConnection.h
corah/examples/: setup_robot.cpp
corah/manipulators/ur5/: CMakeLists.txt  Kinematics.cpp  Kinematics.h  MessageDecoder.cpp  MessageEncoder.cpp  Robot.cpp  Robot.h  Ur5KDLDefinition.h  Ur5MessageDecoder.cpp  Ur5MessageDecoder.h  Ur5MessageEncoder.cpp  Ur5MessageEncoder.h
corah/robotics/: RobotMotion.cpp  RobotMotion.h  RobotState.cpp  RobotState.h
corah/utilities/: corahHeaders.h  corahHelpers.cpp  corahHelpers.h
examples/: CMakeLists.txt  RobotExample.cpp  RobotListen.cpp  setup_robot.cpp
manipulators/ur5/: Ur5MessageDecoder.cpp  Ur5MessageEncoder.h
robotics/: CMakeLists.txt
source/corah/: CMakeLists.txt  Robot.cpp  Robot.h
source/corah/calibration/: CalibrationHelpers.h  CalibrationMethods.cpp
source/corah/communication/: CMakeLists.txt  Client.cpp  Client.h  CommunicationInterface.cpp  CommunicationInterface.h  MessageDecoder.cpp  MessageDecoder.h  MessageEncoder.cpp  MessageEncoder.h
source/corah/core/: Object.h
source/corah/examples/: setup_robot.cpp  setup_zmq.cpp
source/corah/manipulators/: CMakeLists.txt
source/corah/manipulators/ur5/: Ur5KDLDefinition.h  Ur5MessageDecoder.cpp  Ur5MessageDecoder.h  Ur5MessageEncoder.cpp  Ur5MessageEncoder.h
source/corah/robotics/: CMakeLists.txt  RobotMotion.h  RobotState.h
source/corah/utilities/: CMakeLists.txt  corahHeaders.h  corahHelpers.cpp  corahHelpers.h
source/pyromocc/: CMakeLists.txt  README.md  setup.py
source/pyromocc/examples/: connect_and_listen.py  robot_move_adaptive.py  robotiq_gripper.py  spacemouse_control.py
source/pyromocc/pyromocc/: __init__.py  robot.py
source/pyromocc/pyromocc/tools/: __init__.py  robotiq_gripper.py  spacemouse.py  urscript.py
source/pyromocc/source/: pyromocc.cpp
source/pyromocc/tests/pyromocc/: test_calibration.py  test_robot.py
source/python/: CMakeLists.txt  __init__.py.in  romocc.i  setup.py.in
source/python/examples/: connect_and_listen.py
source/python/pyromocc/: __init__.py  robot.py
source/python/source/: pyromocc.cpp
source/romocc/: CMakeLists.txt  Robot.cpp  Robot.h
source/romocc/calibration/: CMakeLists.txt  CalibrationHelpers.cpp  CalibrationHelpers.h  CalibrationMethods.cpp  CalibrationMethods.h
source/romocc/communication/: CMakeLists.txt  Client.cpp  Client.h  CommunicationInterface.cpp  CommunicationInterface.h  MessageDecoder.cpp  MessageDecoder.h  MessageEncoder.cpp  MessageEncoder.h
source/romocc/core/: CMakeLists.txt  ForwardDeclarations.h  Object.cpp  Object.h  PortableEndian.h  PrecompiledHeaders.h  SmartPointers.h
source/romocc/examples/: setup_robot.cpp
source/romocc/manipulators/: CMakeLists.txt
source/romocc/manipulators/ur/: CMakeLists.txt  UrKDLDefinition.h  UrMessageDecoder.cpp  UrMessageDecoder.h  UrMessageEncoder.cpp  UrMessageEncoder.h
source/romocc/manipulators/ur5/: CMakeLists.txt  Ur5KDLDefinition.h  Ur5MessageDecoder.cpp  Ur5MessageDecoder.h  Ur5MessageEncoder.cpp  Ur5MessageEncoder.h
source/romocc/robotics/: CMakeLists.txt  RobotCoordinateSystem.cpp  RobotCoordinateSystem.h  RobotMotion.cpp  RobotMotion.h  RobotState.cpp  RobotState.h
source/romocc/testing/: CMakeLists.txt  RobotTests.cpp
source/romocc/tests/: RobotTests.cpp
source/romocc/utilities/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  ZMQUtils.cpp  ZMQUtils.h  romoccHeaders.h  romoccHelpers.cpp  romoccHelpers.h
source/romocc/utilities/tests/: CMakeLists.txt  MathUtilsTests.cpp  ZMQUtilsTests.cpp
tests/: CMakeLists.txt  CalibrationTests.cpp  MathUtilsTests.cpp  RobotTests.cpp  ZMQUtilsTests.cpp
tests/assets/calibration/: cal_file.cal
tests/catch/: CMakeLists.txt  CatchMain.cpp  catch.hpp
utilities/: corahHelpers.cpp
